--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
    <h1><span id="length-of-list">5</span> Random Generated Password</h1>
    <h3 id="message-box"></h3>
 
+      <input type="number" name="input-length" id="input-length" placeholder="ex: 5, 3, 1 (max: 50)" oninput="changeValue()">
+
       <ul id="list-password">
 
       </ul>
