--- a/index.html
+++ b/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-   <title>Javascript Random Password Generator</title>
-</head>
-<body>
-   <h1><span id="length-of-list">5</span> Random Generated Password</h1>
-   <h3 id="message-box"></h3>
-
-      <input type="number" name="input-length" id="input-length" placeholder="ex: 5, 3, 1 (max: 50)" oninput="changeValue()">
-
-      <ul id="list-password">
-
-      </ul>
-
-   <script src="script.js"></script>
-</body>
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <link rel="stylesheet" type="text/css" href="main.css">
+      <title>Javascript Random Password Generator</title>
+   </head>
+   <body>
+      <div class="container">      
+         <h1><span id="length-of-list">5</span> Random Generated Password</h1>
+         <h3 id="message-box"></h3>
+         <input type="number" name="input-length" id="input-length" placeholder="ex: 5, 3, 1 (max: 50)" oninput="changeValue()">
+         <ul id="list-password">
+         </ul>
+      </div>
+      <script src="script.js"></script>
+   </body>
 </html>
